# savant-protobuf

./: Cargo.toml
src/: generated.rs  savant_rs.proto
