[package]
name = "savant-protobuf"
version = "0.2.0"
edition = "2021"
authors = ["Ivan Kudriavtsev <ivan.a.kudryavtsev@gmail.com>"]
description = "Savant PB definitions and bindings"
homepage = "https://github.com/insight-platform/savant-rs"
repository = "https://github.com/insight-platform/savant-rs"
readme = "README.md"
keywords = ["computer-vision", "video-processing"]
categories = ["algorithms", "data-structures", "computer-vision"]
license = "Apache-2.0"
rust-version = "1.70"

[dependencies]
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
prost-build = "0.12"
